Provide homework progress

--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "mocha": "^7.1.2"
+  },
+  "dependencies": {
+    "run": "^1.4.0",
+    "test": "^0.6.0"
   }
 }
